kubedeployconfigs/kubedeployconfigs.yaml
---
apiVersion: "apps/v1"
kind: "Deployment"
resources:
  requests:
    cpu: 250m
    limits:
      cpu: 500m
metadata:
  name: "sampleapp2"
  namespace: "default"
  labels:
    app: "sampleapp2"
spec:
  replicas: 1
  selector:
    matchLabels:
      app: "sampleapp2"
  template:
    metadata:
      labels:
        app: "sampleapp2"
    spec:
      containers:
      - name: "sampleapiapp"
        image: "__CONTAINER-REPO__/__imageRepository__:__tag__"
        ports:
        - containerPort: 80
          protocol: TCP
---
apiVersion: v1
kind: Service
metadata:
  name: sampleapp2service
  namespace: default
spec:
  ports:
  - port: 80
    protocol: TCP
    targetPort: 80
  selector:
    app: sampleapp2
  type: ClusterIP
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: sampleapp2-ingress
  namespace: default
  annotations:
    kubernetes.io/ingress.class: "nginx"
spec:
  defaultBackend:
    service:
      name: sampleapp2service
      port:
        number: 80
